Add mobile navigation and section animations
Introduced a responsive mobile navigation menu with open/close functionality and appropriate styles. Added Intersection Observer-based animations for hero and services sections, including new CSS classes and keyframes for sliding and staggering effects.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,26 @@
             <li><a href="#services">FAQ</a></li>
           </ul>
           <button class="btn-primary">Get Started</button>
+          <button class="mobile-nav-toggle" aria-label="Toggle menu">☰</button>
         </nav>
+        
+        <!-- Mobile Navigation -->
+        <div class="mobile-nav">
+          <div class="mobile-nav-header">
+            <a href="#" class="logo">Logo</a>
+            <button class="mobile-nav-close" aria-label="Close menu">✕</button>
+          </div>
+          <div class="mobile-nav-links">
+            <a href="#hero" class="mobile-nav-link">Membership</a>
+            <a href="#services" class="mobile-nav-link">Location</a>
+            <a href="#services" class="mobile-nav-link">Facilities</a>
+            <a href="#services" class="mobile-nav-link">FAQ</a>
+          </div>
+          <div class="mobile-nav-buttons">
+            <button class="mobile-btn mobile-btn-primary">Try it free</button>
+            <button class="mobile-btn mobile-btn-secondary">Get Started</button>
+          </div>
+        </div>
       </header>
 
       <!-- Hero and Features Container -->
