Refactor scroll behavior and update UI sections
Refactored scroll snap logic to apply only on desktop, removed custom scroll/keyboard/touch navigation handlers, and improved parallax effect for the location section. Updated index.html to change the title, remove the newsletter from the footer, and clean up section markup. Overhauled style.css for better responsive design, modularized section styles, and improved scroll snap and layout consistency across devices.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>Gym - Your Healthy Lifestyle</title>
+    <title>Musculo Gym - Gym lengkap 200k</title>
   </head>
   <body>
     <div id="app">
@@ -274,7 +274,6 @@
           </div>
         </div>
       </section>
-      </section>
 
       <!-- Pricing Section -->
       <section id="pricing" class="pricing-section">
@@ -371,7 +370,8 @@
         </div>
       </section>
 
-       <section id="location" class="location-section">
+       <!-- Location Section -->
+      <section id="location" class="location-section">
         <div class="location-container">
           <div class="location-content">
           <h2 class="location-title">Find Our Location Here</h2>
@@ -380,7 +380,7 @@
         </div>
         
       </section>
-       <!-- Footer Section -->
+      <!-- Footer Section -->
       <footer id="footer" class="footer-section">
         <div class="footer-content">
           <!-- Main Footer Content -->
@@ -482,19 +482,6 @@
               </div>
             </div>
           </div>
-
-          <!-- Newsletter Section -->
-          <div class="footer-newsletter">
-            <div class="newsletter-content">
-              <h4 class="newsletter-title">Stay Updated</h4>
-              <p class="newsletter-description">Subscribe to our newsletter for fitness tips, class updates, and exclusive offers.</p>
-            </div>
-            <div class="newsletter-form">
-              <input type="email" placeholder="Enter your email" class="newsletter-input">
-              <button class="btn-primary newsletter-btn">Subscribe</button>
-            </div>
-          </div>
-
           <!-- Footer Bottom -->
           <div class="footer-bottom">
             <div class="footer-bottom-content">
